# mcp-multi-agent

./: .gitignore  CLAUDE.md  README.md  claude_desktop_config_example.json  pyproject.toml
.github/: pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.yml  config.yml  feature_request.yml  question.yml
spike/: FINDINGS.md  README.md
spike/data/: generate_data.py
spike/engineer-agent/: server.py
spike/monitor-agent/: server.py
tests/: conftest.py  test_engineer_agent.py  test_monitor_agent.py
